integration refactored to be juno-master (coordinator runner) also added juno-node is a NodeMain.java runner. BL wasn't changed